[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-shell-assistant"
version = "1.0.0"
description = "AI-powered shell script assistant."
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
ai-shell-assistant = "ai_shell_assistant.main:cli"

[tool.setuptools.packages.find]
include = ["ai_shell_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
